add debug display of env

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,6 @@
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+    <div class="container", style="background-color:#EEEEEE"><%= Rails.env %></div>
   </body>
 </html>
